fixed navbar overlapping body, add link to product cotegories

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -23,6 +23,7 @@ html {
   min-height: 100%;
 }
 body {
+  padding-top: 100px;
   margin-bottom: 200px;
 }
 /* navbar */
